Fix long codelines on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -274,7 +274,13 @@ article.post img {
 article.post .social {
   text-align: right;
 }
-/* line 68, ../sass/_post.scss */
+/* line 67, ../sass/_post.scss */
+article.post p code {
+  max-width: 100%;
+  display: inline-block;
+  overflow: auto;
+}
+/* line 73, ../sass/_post.scss */
 article.post pre code, article.post pre {
   white-space: pre;
   word-break: normal;
@@ -282,7 +288,7 @@ article.post pre code, article.post pre {
   word-wrap: normal;
 }
 
-/* line 78, ../sass/_post.scss */
+/* line 83, ../sass/_post.scss */
 .disqus {
   padding-top: 10px;
   color: white;
@@ -296,7 +302,7 @@ article.post pre code, article.post pre {
 }
 
 @media (max-width: 767px) {
-  /* line 96, ../sass/_post.scss */
+  /* line 101, ../sass/_post.scss */
   article.post img {
     display: block;
     margin: auto;
